kubernetes/legacy/apps/paperless/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "paperless.k8s.local"
  rules:
    - backendRefs:
        - name: paperless
          port: 8000
